--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
         </div>
         <div class="stack-div">
             <label for="stack-field">Qual stack você deseja aprender?</label>
-            <input type="radio" value="Frontend">Frontend</input>
-            <input type="radio" value="Backend">Backend</input>
-            <input type="radio" value="Fullstack">Fullstack</input>
+            <input class="stack-input" name="stack-radio" type="radio" value="Frontend">Frontend
+            <input class="stack-input" name="stack-radio" type="radio" value="Backend">Backend
+            <input class="stack-input" name="stack-radio" type="radio" value="Fullstack">Fullstack
         </div>
         <div class="about-div">
             <label for="about-field">Fale sobre você:</label>
             <textarea name="about-field" rows="4" cols="40"></textarea>
         </div>
         <div class="submit-div">
-            <button type="submit">Enviar</button>
+            <button class="submit-btn" type="button">Enviar</button>
         </div>
     </form>
+    <footer>Paulo Ferreira</footer>
+    <script src="script.js"></script>
 </body>
 </html>
