Script do formulário inicio

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <form>
         <div class="name-div">
             <label for="name-field">Nome Completo:</label>
-            <input name="name-field" type="text"/>
+            <input name="name-field" class="name-field" type="text"/>
         </div>
         <div class="email-div">
             <label for="email-field">E-mail:</label>
-            <input name="email-field" type="email"/>
+            <input name="email-field" class="email-field" type="email"/>
         </div>
         <div class="phone-div">
             <label for="phone-field">Telefone:</label>
